--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperatureconvertor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tempeatureconvertor/style.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="website icon" type="png" href="temp.png">
+    <link rel="website icon" type="png" href="temperaturconvertor/temp.png">
 
 </head>
 <body>
@@ -32,6 +32,6 @@
             <button>Clear</button>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="temperatureconvertor/app.js"></script>
 </body>
 </html>
